# django-rest-playground

./: db.sqlite3  pyproject.toml
playground/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
